infra/gke/k8s-manifests-staging/app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canvas-staging
  labels:
    name: canvas
